examples/test/testpolicy257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy257
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key17: value44
      key12: value4
      key5: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value48
      podSelector:
        matchLabels:
          key2: value10
          key27: value42
